--- a/business/src/assets/css/product.css
+++ b/business/src/assets/css/product.css
@@ -19,14 +19,15 @@
 }
 
 .accessory-list > ul > li:hover {
-  border-color: #ee7a23;
+  border-color: #00C1DE;
   -webkit-transform: translateY(-5px);
   -ms-transform: translateY(-5px);
   transform: translateY(-5px);
-  -webkit-box-shadow: 0 0 10px #999;
-  box-shadow: 0 0 10px #999;
+  -webkit-box-shadow: 0 0 30px #00C1DE;
+  box-shadow: 0 0 30px #00C1DE;
   -webkit-transition: all .5s ease-out;
   transition: all .5s ease-out;
+  cursor: pointer;
 }
 
 .accessory-list.col-4 > ul > li {
@@ -248,7 +249,7 @@
 }
 
 .filter dd a:hover, .filter dd .cur {
-  color: #ee7a23;
+  color: #0099CC;
 }
 
 .filter .filter-category ul {
@@ -302,7 +303,7 @@
 .filter .filter-price dd a:hover, .filter .filter-price dd .cur {
   -webkit-transition: padding-left .3s ease-out;
   transition: padding-left .3s ease-out;
-  border-left: 2px solid #ee7a23;
+  border-left: 2px solid #0099CC;
   padding-left: 15px;
 }
 
